Fixes desktop margin and alignment.

--- a/myuw/static/css/boilerplate.less
+++ b/myuw/static/css/boilerplate.less
@@ -474,7 +474,7 @@ body { padding: 0; margin: 0; font-family: "Open Sans",Helvetica,Arial,Verdana,s
         @media @two-column { border-left: solid 1px #ddd; min-width: 120px; text-align: left; padding-left: 8px; float: right; }
 
         &:first-child { display: block; border: none; padding-left: 0; border-bottom: solid 1px #ddd; padding-bottom: 8px;
-            @media @two-column { display: inline-block;float: left; border: none; }
+            @media @two-column { display: inline-block;float: left; border: none; padding-bottom: 0;}
             @media @desktop { padding-left: 16px; }
 
         }
